kubernetes/apps/tekton-pipelines/ci/app/triggers/virtualservice.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tekton-opentofu-webhook
  namespace: tekton-pipelines

  annotations:
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: letsencrypt-production
    external-dns/is-public: "true"
    external-dns.alpha.kubernetes.io/target: external.${SECRET_DOMAIN}
spec:
  ingressClassName: external
  rules:
    - host: &host tekton-webhook.${SECRET_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: el-opentofu-listener
                port:
                  number: 8080
  tls:
    - hosts:
        - *host
      secretName: tekton-webhook-tls-secret
